控制广告时间

--- a/BuDeJie/Classes/AD(广告)/Controller/FKLADViewController.xib
+++ b/BuDeJie/Classes/AD(广告)/Controller/FKLADViewController.xib
@@ -9,6 +9,7 @@
             <connections>
                 <outlet property="LaunchImageView" destination="Hbv-fa-MTS" id="HWv-jl-qWy"/>
                 <outlet property="adContainView" destination="r9u-Zu-QHG" id="QDd-n8-9Dz"/>
+                <outlet property="jumpBtn" destination="ihX-05-SVp" id="JfM-ZJ-7dC"/>
                 <outlet property="view" destination="iN0-l3-epB" id="TuE-58-PVH"/>
             </connections>
         </placeholder>
@@ -24,13 +25,17 @@
                     <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                 </view>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ihX-05-SVp">
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ihX-05-SVp">
                     <rect key="frame" x="520" y="20" width="60" height="30"/>
                     <color key="backgroundColor" white="0.0" alpha="0.63690350506756754" colorSpace="calibratedWhite"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="60" id="s05-s3-YDC"/>
                     </constraints>
+                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
                     <state key="normal" title="跳过(3)"/>
+                    <connections>
+                        <action selector="jumpBtnClick:" destination="-1" eventType="touchUpInside" id="JZm-vJ-Qxx"/>
+                    </connections>
                 </button>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
