--- a/BuDeJie/Classes/FriendTrend(关注)/Controller/FKLLoginRegisterViewController.xib
+++ b/BuDeJie/Classes/FriendTrend(关注)/Controller/FKLLoginRegisterViewController.xib
@@ -7,6 +7,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="FKLLoginRegisterViewController">
             <connections>
+                <outlet property="middleView" destination="zCj-2j-DKK" id="TWL-if-dYv"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
