--- a/BuDeJie/Classes/FriendTrend(关注)/Controller/FKLFriendTrendViewController.xib
+++ b/BuDeJie/Classes/FriendTrend(关注)/Controller/FKLFriendTrendViewController.xib
@@ -22,11 +22,13 @@
                         <constraint firstAttribute="width" constant="48" id="dh6-Rr-KWy"/>
                     </constraints>
                 </imageView>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="r2y-7G-WOC">
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="0.0" translatesAutoresizingMaskIntoConstraints="NO" id="r2y-7G-WOC">
                     <rect key="frame" x="70" y="303" width="235" height="61"/>
-                    <string key="text">快快登录把，关注百思最in牛人好友动态让你过把瘾儿～欧耶～～～</string>
+                    <string key="text">快快登录把，关注百思最in牛人
+好友动态让你过把瘾儿～
+欧耶～～～</string>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wiP-MG-DJH">
