--- a/BuDeJie/Classes/Essence(精华)/View/FKLTopicVideoView.xib
+++ b/BuDeJie/Classes/Essence(精华)/View/FKLTopicVideoView.xib
@@ -7,13 +7,68 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="FKLTopicVideoView">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="176"/>
+        <view contentMode="scaleToFill" id="STR-7t-crL" customClass="FKLTopicVideoView">
+            <rect key="frame" x="0.0" y="0.0" width="372" height="254"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-            <color key="backgroundColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+            <subviews>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="SwJ-nu-p4d">
+                    <rect key="frame" x="0.0" y="0.0" width="372" height="254"/>
+                </imageView>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rFT-H7-ase">
+                    <rect key="frame" x="151" y="92" width="71" height="71"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                    <state key="normal" image="video-play"/>
+                </button>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Alr-Aw-dxW" userLabel="Play Count Label">
+                    <rect key="frame" x="334" y="0.0" width="38" height="18"/>
+                    <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                    <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jew-Cx-FuS" userLabel="Voice Time Label">
+                    <rect key="frame" x="334" y="236" width="38" height="18"/>
+                    <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                    <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="imageBackground" translatesAutoresizingMaskIntoConstraints="NO" id="5yf-Ya-qhs">
+                    <rect key="frame" x="0.0" y="20" width="372" height="50"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="50" id="aJB-ug-Fja"/>
+                    </constraints>
+                </imageView>
+            </subviews>
+            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+            <constraints>
+                <constraint firstItem="SwJ-nu-p4d" firstAttribute="top" secondItem="STR-7t-crL" secondAttribute="top" id="2Ad-1Q-hVo"/>
+                <constraint firstAttribute="bottom" secondItem="Jew-Cx-FuS" secondAttribute="bottom" id="40W-IO-qIC"/>
+                <constraint firstItem="rFT-H7-ase" firstAttribute="centerY" secondItem="STR-7t-crL" secondAttribute="centerY" id="6Dg-9y-0kZ"/>
+                <constraint firstAttribute="bottom" secondItem="SwJ-nu-p4d" secondAttribute="bottom" id="F67-wx-uQW"/>
+                <constraint firstItem="rFT-H7-ase" firstAttribute="centerX" secondItem="STR-7t-crL" secondAttribute="centerX" id="GxI-Lt-uVX"/>
+                <constraint firstItem="5yf-Ya-qhs" firstAttribute="leading" secondItem="STR-7t-crL" secondAttribute="leading" id="IIf-gY-qjj"/>
+                <constraint firstItem="5yf-Ya-qhs" firstAttribute="top" secondItem="STR-7t-crL" secondAttribute="top" constant="20" id="N9U-ce-A6y"/>
+                <constraint firstItem="SwJ-nu-p4d" firstAttribute="leading" secondItem="STR-7t-crL" secondAttribute="leading" id="ORM-c6-UHh"/>
+                <constraint firstAttribute="trailing" secondItem="Alr-Aw-dxW" secondAttribute="trailing" id="aXq-XL-qsA"/>
+                <constraint firstAttribute="trailing" secondItem="5yf-Ya-qhs" secondAttribute="trailing" id="hPc-Kl-xpn"/>
+                <constraint firstAttribute="trailing" secondItem="Jew-Cx-FuS" secondAttribute="trailing" id="j8H-bw-BSG"/>
+                <constraint firstItem="Alr-Aw-dxW" firstAttribute="top" secondItem="STR-7t-crL" secondAttribute="top" id="qWh-ne-gNf"/>
+                <constraint firstAttribute="trailing" secondItem="SwJ-nu-p4d" secondAttribute="trailing" id="x8T-MF-1oW"/>
+            </constraints>
             <nil key="simulatedStatusBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <point key="canvasLocation" x="328.5" y="159"/>
+            <connections>
+                <outlet property="imageView" destination="SwJ-nu-p4d" id="0QL-LN-wL4"/>
+                <outlet property="placeholderImage" destination="5yf-Ya-qhs" id="us2-nR-VYW"/>
+                <outlet property="playcountLabel" destination="Alr-Aw-dxW" id="QLE-H2-Hg8"/>
+                <outlet property="videotimeLabel" destination="Jew-Cx-FuS" id="8Nb-fc-5da"/>
+            </connections>
+            <point key="canvasLocation" x="326" y="198"/>
         </view>
     </objects>
+    <resources>
+        <image name="imageBackground" width="75" height="15"/>
+        <image name="video-play" width="71" height="71"/>
+    </resources>
 </document>
