--- a/BuDeJie/Classes/Essence(精华)/View/FKLTopicVoiceView.xib
+++ b/BuDeJie/Classes/Essence(精华)/View/FKLTopicVoiceView.xib
@@ -8,40 +8,49 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="FKLTopicVoiceView">
-            <rect key="frame" x="0.0" y="0.0" width="230" height="120"/>
+            <rect key="frame" x="0.0" y="0.0" width="372" height="254"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="gjI-gi-mDc">
-                    <rect key="frame" x="0.0" y="0.0" width="230" height="120"/>
+                    <rect key="frame" x="0.0" y="0.0" width="372" height="254"/>
                 </imageView>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oev-nR-hOT">
-                    <rect key="frame" x="84" y="28" width="63" height="63"/>
+                    <rect key="frame" x="155" y="96" width="63" height="63"/>
                     <fontDescription key="fontDescription" type="system" pointSize="16"/>
                     <state key="normal" image="playButtonPlay" backgroundImage="playButton"/>
                     <state key="highlighted" backgroundImage="playButtonClick"/>
                 </button>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Mtj-D7-EG9" userLabel="Play Count Label">
-                    <rect key="frame" x="192" y="0.0" width="38" height="18"/>
+                    <rect key="frame" x="334" y="0.0" width="38" height="18"/>
                     <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                     <fontDescription key="fontDescription" type="system" pointSize="15"/>
                     <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rgb-Ly-To6" userLabel="Voice Time Label">
-                    <rect key="frame" x="192" y="102" width="38" height="18"/>
+                    <rect key="frame" x="334" y="236" width="38" height="18"/>
                     <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                     <fontDescription key="fontDescription" type="system" pointSize="15"/>
                     <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <nil key="highlightedColor"/>
                 </label>
+                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="imageBackground" translatesAutoresizingMaskIntoConstraints="NO" id="7VB-1a-WQf">
+                    <rect key="frame" x="0.0" y="20" width="372" height="50"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="50" id="64z-fC-RW1"/>
+                    </constraints>
+                </imageView>
             </subviews>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             <constraints>
+                <constraint firstAttribute="trailing" secondItem="7VB-1a-WQf" secondAttribute="trailing" id="0Hg-Sf-VYj"/>
                 <constraint firstAttribute="trailing" secondItem="rgb-Ly-To6" secondAttribute="trailing" id="18g-or-dIp"/>
                 <constraint firstItem="oev-nR-hOT" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="EcK-mJ-vIY"/>
                 <constraint firstAttribute="bottom" secondItem="gjI-gi-mDc" secondAttribute="bottom" id="HKd-eb-MY8"/>
                 <constraint firstItem="gjI-gi-mDc" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="HUx-UJ-gnb"/>
+                <constraint firstItem="7VB-1a-WQf" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="HYS-5Z-e13"/>
                 <constraint firstItem="Mtj-D7-EG9" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="QEW-Cb-oUm"/>
+                <constraint firstItem="7VB-1a-WQf" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="20" id="RUL-qV-a3g"/>
                 <constraint firstAttribute="trailing" secondItem="Mtj-D7-EG9" secondAttribute="trailing" id="RuW-Bs-hwz"/>
                 <constraint firstAttribute="bottom" secondItem="rgb-Ly-To6" secondAttribute="bottom" id="YaA-UB-nrd"/>
                 <constraint firstItem="oev-nR-hOT" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="oSh-u1-3bY"/>
@@ -52,13 +61,15 @@
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
                 <outlet property="imageView" destination="gjI-gi-mDc" id="WEg-8f-04p"/>
+                <outlet property="placeholderImage" destination="7VB-1a-WQf" id="Kh7-ch-GpJ"/>
                 <outlet property="playcountLabel" destination="Mtj-D7-EG9" id="kx2-hE-8iF"/>
                 <outlet property="voicetimeLabel" destination="rgb-Ly-To6" id="4W3-dF-gmO"/>
             </connections>
-            <point key="canvasLocation" x="255" y="131"/>
+            <point key="canvasLocation" x="326" y="198"/>
         </view>
     </objects>
     <resources>
+        <image name="imageBackground" width="75" height="15"/>
         <image name="playButton" width="63" height="63"/>
         <image name="playButtonClick" width="63" height="63"/>
         <image name="playButtonPlay" width="30" height="30"/>
