--- a/BuDeJie/Classes/Essence(精华)/View/FKLTopicPictureView.xib
+++ b/BuDeJie/Classes/Essence(精华)/View/FKLTopicPictureView.xib
@@ -7,13 +7,63 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="FKLTopicPictureView">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="214"/>
+        <view contentMode="scaleToFill" id="HBG-vf-bSC" customClass="FKLTopicPictureView">
+            <rect key="frame" x="0.0" y="0.0" width="372" height="254"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-            <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+            <subviews>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="9Ng-Ay-Ga8">
+                    <rect key="frame" x="0.0" y="0.0" width="372" height="254"/>
+                </imageView>
+                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="imageBackground" translatesAutoresizingMaskIntoConstraints="NO" id="p5F-CF-SWu">
+                    <rect key="frame" x="0.0" y="20" width="372" height="50"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="50" id="vBH-UP-Gfj"/>
+                    </constraints>
+                </imageView>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="common-gif" translatesAutoresizingMaskIntoConstraints="NO" id="6vJ-Dl-JjQ">
+                    <rect key="frame" x="0.0" y="0.0" width="31" height="31"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="31" id="RZD-sE-nSP"/>
+                        <constraint firstAttribute="width" constant="31" id="uZb-kL-Jog"/>
+                    </constraints>
+                </imageView>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="782-JZ-ArQ">
+                    <rect key="frame" x="0.0" y="211" width="372" height="43"/>
+                    <inset key="titleEdgeInsets" minX="10" minY="0.0" maxX="0.0" maxY="0.0"/>
+                    <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="10" maxY="0.0"/>
+                    <state key="normal" title="点击查看大图" image="see-big-picture" backgroundImage="see-big-picture-background"/>
+                </button>
+            </subviews>
+            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+            <constraints>
+                <constraint firstAttribute="bottom" secondItem="782-JZ-ArQ" secondAttribute="bottom" id="1de-iu-rI6"/>
+                <constraint firstAttribute="trailing" secondItem="782-JZ-ArQ" secondAttribute="trailing" id="4du-Vs-fq4"/>
+                <constraint firstItem="p5F-CF-SWu" firstAttribute="top" secondItem="HBG-vf-bSC" secondAttribute="top" constant="20" id="7aD-HY-w56"/>
+                <constraint firstAttribute="bottom" secondItem="9Ng-Ay-Ga8" secondAttribute="bottom" id="EsJ-yz-2hY"/>
+                <constraint firstItem="782-JZ-ArQ" firstAttribute="leading" secondItem="HBG-vf-bSC" secondAttribute="leading" id="HdC-uD-l9D"/>
+                <constraint firstAttribute="trailing" secondItem="9Ng-Ay-Ga8" secondAttribute="trailing" id="JFL-Zk-qL7"/>
+                <constraint firstItem="p5F-CF-SWu" firstAttribute="leading" secondItem="HBG-vf-bSC" secondAttribute="leading" id="O3v-bu-saW"/>
+                <constraint firstItem="6vJ-Dl-JjQ" firstAttribute="top" secondItem="HBG-vf-bSC" secondAttribute="top" id="OYs-Yt-3B3"/>
+                <constraint firstItem="6vJ-Dl-JjQ" firstAttribute="leading" secondItem="HBG-vf-bSC" secondAttribute="leading" id="bTy-R7-dOw"/>
+                <constraint firstItem="9Ng-Ay-Ga8" firstAttribute="leading" secondItem="HBG-vf-bSC" secondAttribute="leading" id="js5-sq-N2y"/>
+                <constraint firstAttribute="trailing" secondItem="p5F-CF-SWu" secondAttribute="trailing" id="mE2-SG-uCi"/>
+                <constraint firstItem="9Ng-Ay-Ga8" firstAttribute="top" secondItem="HBG-vf-bSC" secondAttribute="top" id="mOK-Dp-lgh"/>
+            </constraints>
             <nil key="simulatedStatusBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <point key="canvasLocation" x="327.5" y="631"/>
+            <connections>
+                <outlet property="gifView" destination="6vJ-Dl-JjQ" id="aFq-fr-9nV"/>
+                <outlet property="imageView" destination="9Ng-Ay-Ga8" id="Wir-SY-eYw"/>
+                <outlet property="placeholderImage" destination="p5F-CF-SWu" id="UhC-15-BQN"/>
+                <outlet property="seeBigPictureButton" destination="782-JZ-ArQ" id="A5s-8z-jsA"/>
+            </connections>
+            <point key="canvasLocation" x="326" y="198"/>
         </view>
     </objects>
+    <resources>
+        <image name="common-gif" width="31" height="31"/>
+        <image name="imageBackground" width="75" height="15"/>
+        <image name="see-big-picture" width="19" height="19"/>
+        <image name="see-big-picture-background" width="285" height="43"/>
+    </resources>
 </document>
