--- a/BuDeJie/Classes/Essence(精华)/View/FKLTopicVoiceView.xib
+++ b/BuDeJie/Classes/Essence(精华)/View/FKLTopicVoiceView.xib
@@ -11,7 +11,7 @@
             <rect key="frame" x="0.0" y="0.0" width="372" height="254"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="gjI-gi-mDc">
+                <imageView contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="gjI-gi-mDc">
                     <rect key="frame" x="0.0" y="0.0" width="372" height="254"/>
                 </imageView>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oev-nR-hOT">
